--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
 			<scope>system</scope>
 			<systemPath>C:/Users/zosiarytlewska/.m2/repository/ojdbc6.jar</systemPath>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
+  </dependencies>
 
 	<build>
 		<finalName>hbdemo</finalName>
